# crewai_docs_updater

./: .env.example  README.md  pyproject.toml
src/crewai_docs_updater/: main.py  types.py
src/crewai_docs_updater/agents/: __init__.py  translator_agent.py
src/crewai_docs_updater/clients/: github_client.py
src/crewai_docs_updater/services/: __init__.py  file_translation_service.py  github_service.py
